# octahedral-rotations

./: README.md  octahedral_rotation.py  pyproject.toml
examples/: example.py
octahedral_rotations/: __init__.py  octahedral_rotations.py  utilities.py
octahedral_rotations/test/test_structures/: Pmn211.vasp  Pnma10.vasp  Pnma11.vasp  Pnma14.vasp  Pnma2.vasp  Pnma3.vasp  Pnma5.vasp  Pnma7.vasp  Pnma_swap.vasp
test/: test.py
test/test_structures/: Pnma1.vasp  Pnma13.vasp  Pnma15.vasp  Pnma18.vasp  Pnma6.vasp  Pnma8.vasp  Pnma9.vasp  rename_structures.py
tests/: test.py
tests/test_structures/: Pna211.vasp  Pnma12.vasp  Pnma16.vasp  Pnma17.vasp  Pnma4.vasp
